--- a/src/ejs/parts/_p-mainvisual.ejs
+++ b/src/ejs/parts/_p-mainvisual.ejs
@@ -1,7 +1,7 @@
 <div class="p-mainvisual">
   <div class="p-mainvisual__content">
-    <div class="p-mainvisual__title">タイトル</div>
-    <div class="p-mainvisual__lead">リード文</div>
+    <div class="p-mainvisual__title">メインタイトルが入ります</div>
+    <div class="p-mainvisual__lead">サブタイトルが入ります</div>
   </div>
   <!-- Swiperに関する記述 -->
   <div class="swiper p-mainvisual-swiper js-mainvisual-swiper">
